tests/toy/neg/001889_mutation.toylang
var a : bool program a = { } .
